# pinentry-rofi

./: .gitignore  AUTHORS  COPYING  ChangeLog  HACKING  Makefile  Makefile.am  NEWS  README.md  README.org  configure.ac  guix.scm  hall.scm  pinentry-rofi.scm  pre-inst-env.in  rofi-pinentry.scm  test.scm
.github/workflows/: makefile.yml
.reuse/: dep5
build-aux/: PKGBUILD  test-driver.scm
doc/: pinentry-rofi.texi
scripts/: pinentry-rofi.in
tests/: pinentry-rofi.scm
